package com.xiewz.session;

public interface SqlSessionFactory {

    SqlSession openSession();
}
